--- a/Debezium/src/main/resources/application.properties
+++ b/Debezium/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #Database Properties
 resource.datasource.host=10.10.13.57
 resource.datasource.port=3306
-resource.datasource.database=acd
+resource.datasource.database=praveen_db
 resource.datasource.username=root
 resource.datasource.password=Ctel@12345
 
